--- a/joy_20121011_client/AndroidManifest.xml
+++ b/joy_20121011_client/AndroidManifest.xml
@@ -3,8 +3,30 @@
     package="com.joy"
     android:versionCode="1"
     android:versionName="1.0" >
-
-    <uses-sdk android:minSdkVersion="8" />
+		<uses-permission android:name="android.permission.CAMERA" />
+        <uses-permission android:name="android.permission.VIBRATE" />
+        <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+        <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+        <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+        <uses-permission android:name="android.permission.INTERNET" />
+        <uses-permission android:name="android.permission.RECEIVE_SMS" />
+        <uses-permission android:name="android.permission.RECORD_AUDIO" />
+        <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+        <uses-permission android:name="android.permission.READ_CONTACTS" />
+        <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> 
+        <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+        <uses-permission android:name="android.permission.BROADCAST_STICKY" />
+        <uses-permission android:name="android.permission.INTERNET" />
+        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> 
+        <uses-permission android:name="android.permission.SEND_SMS"/>
+        <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+        <uses-permission android:name="android.permission.WRITE_APN_SETTINGS"></uses-permission>
+        <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
+		
+        <uses-sdk android:minSdkVersion="8" />
 
     <application
         android:name=".GetThird_AccessToken"
@@ -150,7 +172,6 @@
             android:theme="@android:style/Theme.NoTitleBar"
             >
         </activity>
-        
         <activity android:name="com.tencent.tauth.TAuthView" android:theme="@android:style/Theme.NoTitleBar" android:launchMode="singleTask" android:configChanges="keyboardHidden|navigation|orientation">
 			<intent-filter>  
 			    <action android:name="android.intent.action.VIEW" />  
@@ -160,13 +181,6 @@
 			</intent-filter>  
         </activity>
     </application>
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>   
-<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission> 
-<uses-permission android:name="android.permission.WRITE_APN_SETTINGS"></uses-permission>
-<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
-<uses-permission android:name="android.permission.READ_CONTACTS"/>
-<uses-permission android:name="android.permission.SEND_SMS"/>
+
 
 </manifest>
