--- a/joy_20121011_client/AndroidManifest.xml
+++ b/joy_20121011_client/AndroidManifest.xml
@@ -172,6 +172,19 @@
             android:theme="@android:style/Theme.NoTitleBar"
             >
         </activity>
+        <activity 
+            android:name=".PlayVideoActivity"
+            android:theme="@android:style/Theme.NoTitleBar"
+            >
+        </activity>
+        <activity
+            android:name="MediaActivity"
+            android:label="@string/app_name"
+					android:screenOrientation="landscape"
+                 	 android:configChanges="orientation|keyboardHidden"
+                 	 android:windowSoftInputMode="stateAlwaysHidden"
+                  	android:theme="@android:style/Theme.NoTitleBar.Fullscreen" 
+            />
         <activity android:name="com.tencent.tauth.TAuthView" android:theme="@android:style/Theme.NoTitleBar" android:launchMode="singleTask" android:configChanges="keyboardHidden|navigation|orientation">
 			<intent-filter>  
 			    <action android:name="android.intent.action.VIEW" />  
