--- a/joy_20121011_client/AndroidManifest.xml
+++ b/joy_20121011_client/AndroidManifest.xml
@@ -184,6 +184,18 @@
             android:screenOrientation="portrait"
             >
         </activity>
+        <activity 
+            android:name=".Guanzhuderen"
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:screenOrientation="portrait"
+            >
+        </activity>
+        <activity 
+            android:name=".Friend"
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:screenOrientation="portrait"
+            >
+        </activity>
         <activity
             android:name="MediaActivity"
             android:label="@string/app_name"
