--- a/joy_20121011_client/AndroidManifest.xml
+++ b/joy_20121011_client/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <uses-permission android:name="android.permission.INTERNET"></uses-permission> 
         <uses-permission android:name="android.permission.READ_LOGS"></uses-permission>
 		
-        <uses-sdk android:minSdkVersion="8" />
+        <uses-sdk android:minSdkVersion="10" />
 
     <application
         android:name=".GetThird_AccessToken"
@@ -157,6 +157,7 @@
         <activity 
             android:name=".ReplyActivity"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"
             android:theme="@android:style/Theme.NoTitleBar"
             >
         </activity>
