--- a/joy_20121011_client/AndroidManifest.xml
+++ b/joy_20121011_client/AndroidManifest.xml
@@ -24,9 +24,8 @@
         <uses-permission android:name="android.permission.READ_LOGS"></uses-permission>
         <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission> 
         <uses-permission android:name="android.permission.INTERNET"></uses-permission> 
-        <uses-permission android:name="android.permission.READ_LOGS"></uses-permission>
 		
-        <uses-sdk android:minSdkVersion="10" />
+        <uses-sdk android:minSdkVersion="8" />
 
     <application
         android:name=".GetThird_AccessToken"
@@ -158,6 +157,7 @@
             android:name=".ReplyActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize"
+             android:configChanges="orientation|keyboardHidden"
             android:theme="@android:style/Theme.NoTitleBar"
             >
         </activity>
