--- a/yueshipin/AndroidManifest.xml
+++ b/yueshipin/AndroidManifest.xml
@@ -38,6 +38,7 @@
             android:name=".Main"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
+             android:launchMode="singleTop"
             android:theme="@android:style/Theme.NoTitleBar"
             android:uiOptions="splitActionBarWhenNarrow" >
             <intent-filter>
@@ -231,6 +232,7 @@
             android:exported="true"
             android:process=":DownloadingService" >
         </service>
+         <service android:name="com.parse.PushService" />
 
         <meta-data
             android:name="UMENG_APPKEY"
