--- a/yueshipin/AndroidManifest.xml
+++ b/yueshipin/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionName="0.9.9alpha" >
 
     <uses-sdk
-        android:minSdkVersion="14"
+        android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.CAMERA" />
@@ -37,8 +37,8 @@
         <activity
             android:name=".Main"
             android:label="@string/app_name"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
-             android:launchMode="singleTop"
             android:theme="@android:style/Theme.NoTitleBar"
             android:uiOptions="splitActionBarWhenNarrow" >
             <intent-filter>
@@ -51,11 +51,6 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar"
             android:uiOptions="splitActionBarWhenNarrow" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".Search"
@@ -180,15 +175,13 @@
         <activity
             android:name="com.joyplus.Video_Cache"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar">
+            android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
-
         <activity
             android:name="com.joyplus.Video_Cache_Detail"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar">
+            android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
-
         <activity
             android:name="com.joyplus.weibo.net.WeiboDialog2"
             android:screenOrientation="portrait"
@@ -204,12 +197,14 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
-         <activity
+        <activity
             android:name=".Video.VideoPlayerActivity"
             android:configChanges="orientation|keyboardHidden|navigation"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
@@ -218,14 +213,16 @@
             android:launchMode="singleTop"
             android:theme="@android:style/Theme.NoTitleBar"
             android:windowSoftInputMode="stateAlwaysHidden" />
-        
-          <activity
+        <activity
             android:name=".Dlna.DlnaVideoPlay"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
-        
-         <service android:name=".Dlna.DlnaSelectDevice" android:exported="true"></service> 
+
+        <service
+            android:name=".Dlna.DlnaSelectDevice"
+            android:exported="true" >
+        </service>
 
         <activity
             android:name="com.umeng.fb.ui.SendFeedback"
@@ -240,7 +237,7 @@
             android:exported="true"
             android:process=":DownloadingService" >
         </service>
-         <service android:name="com.parse.PushService" />
+        <service android:name="com.parse.PushService" />
 
         <meta-data
             android:name="UMENG_APPKEY"
@@ -250,4 +247,5 @@
             android:name="UMENG_CHANNEL"
             android:value="a002001" />
     </application>
+
 </manifest>
