--- a/yueshipin/AndroidManifest.xml
+++ b/yueshipin/AndroidManifest.xml
@@ -215,7 +215,7 @@
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".Dlna.DlnaVideoPlay"
-            android:screenOrientation="portrait"
+            android:screenOrientation="landscape"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
 
