--- a/yueshipin/AndroidManifest.xml
+++ b/yueshipin/AndroidManifest.xml
@@ -258,7 +258,9 @@
             android:name=".Relieve_Binding"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
-
+        <service android:name="com.joyplus.faye.FayeService">
+            
+        </service>
         <service
             android:name="com.umeng.common.net.DownloadingService"
             android:exported="true"
