--- a/yueshipin/.classpath
+++ b/yueshipin/.classpath
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="lib" path="libs/zxing.jar"/>
@@ -8,5 +7,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="lib" path="libs/androidquery.jar"/>
 	<classpathentry kind="lib" path="libs/dianju1.00.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/android4.0"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
