--- a/yueshipin/AndroidManifest.xml
+++ b/yueshipin/AndroidManifest.xml
@@ -18,7 +18,6 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" >
-        
     </uses-permission>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" >
     </uses-permission>
@@ -30,7 +29,7 @@
     </uses-permission>
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-   
+
     <application
         android:name="com.joyplus.App"
         android:icon="@drawable/ic_launcher"
@@ -49,6 +48,7 @@
         </activity>
         <activity
             android:name=".Logo"
+            android:exported="true"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar"
@@ -71,25 +71,31 @@
                 <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
         </activity>
-        
-        <activity android:name=".DefaultActivity" android:enabled="false"
-			android:launchMode="singleInstance" android:stateNotNeeded="true">	
-			<intent-filter>
-	               <action android:name="android.intent.action.MAIN" />
-	               <category android:name="android.intent.category.DEFAULT" />
-	        </intent-filter>		
+        <activity
+            android:name=".DefaultActivity"
+            android:enabled="false"
+            android:launchMode="singleInstance"
+            android:stateNotNeeded="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="audio/*" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="video/*" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name=".Search"
             android:screenOrientation="portrait"
@@ -248,6 +254,26 @@
         <activity
             android:name=".Webview_Play"
             android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name=".Weixin_Share"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
+        <activity
+            android:name=".WeixinPage1"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
+        <activity
+            android:name=".WeixinPage2"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
+        <activity
+            android:name=".WeixinPage3"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
 
         <service
