--- a/yueshipin/AndroidManifest.xml
+++ b/yueshipin/AndroidManifest.xml
@@ -48,7 +48,6 @@
         </activity>
         <activity
             android:name=".Logo"
-            android:exported="true"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar"
@@ -275,7 +274,18 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
-
+		<activity 
+		    android:name=".Weixin_ShareVideo"
+		    android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar" >
+		</activity>
+		<activity
+            android:name=".wxapi.WXEntryActivity"
+            android:label="@string/app_name"
+            android:exported="true"
+            android:launchMode="singleTop">
+        </activity>
+		
         <service
             android:name=".Dlna.DlnaSelectDevice"
             android:exported="true" >
@@ -344,7 +354,7 @@
             android:noHistory="true"
             android:theme="@style/Theme.UMDefault" >
         </activity>
-
+        
         <meta-data
             android:name="UMENG_APPKEY"
             android:value="50937e6c5270151fc8000003" >
